--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
       <ul>
         <li>
-          <a href="/1/html/L-sp-1.html">页面一</a>
+          <a href="../1/html/L-sp-1.html">页面一这是新的页面</a>
         </li>
         <li>
           <a href="2/index.html">页面二</a>
