--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="app/sy/html/cll-screen.html">岁乐</a>
         </li>
         <li>
-          <a href="app/food/html/">岁乐</a>
+          <a href="app/food/html/q-shan.html">食神居</a>
         </li>
         <li>
           <a href="app/CookBook3/html/ly.html">食神居</a>
@@ -55,7 +55,13 @@
           <a href="app/suiyue/html/C-ShanPing.html">岁乐</a>
         </li>
         <li>
-          <a href="app/waimai2/spy.html">外卖</a>
+          <a href="app/waimai/spy.html">外卖</a>
+        </li>
+         <li>
+          <a href="app/jushishangS/1_y-sp.html">具时尚</a>
+        </li>
+         <li>
+          <a href="app/fashion/shanping.html">具时尚</a>
         </li>
       </ul>
   </body>
